<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAccount">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="120dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textColorHint="@color/colorAccent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:id="@+id/textInputLayout4"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout5">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout4"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            android:id="@+id/textInputLayout5"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout4"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/second_name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_visibility"
            android:id="@+id/textInputLayout2"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
            android:layout_marginEnd="2dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_visibility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout2" android:layout_marginStart="2dp"
            android:id="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:layout_marginEnd="8dp"
            android:textColor="@color/textAccent"
            android:backgroundTint="#E90909"
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            android:id="@+id/signUp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:textColor="@color/textAccent"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:background="@drawable/btn_background"
            android:id="@+id/signIn"
            android:text="@string/have_acc"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintTop_toTopOf="@+id/signUp"
            app:layout_constraintBottom_toBottomOf="@+id/signUp"/>

</androidx.constraintlayout.widget.ConstraintLayout>