<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".Welcome"
        android:onClick="bodyClick"
        android:id="@+id/signInBody"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textInputLayout10">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/ic_visibility"
                app:passwordToggleTint="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout10"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout10"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout10">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pwd"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:id="@+id/signInBtn"
                android:text="@string/sign_in"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:textColor="@color/textAccent"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password"/>
        <Button
                android:id="@+id/reg"
                android:onClick="regUser"
                android:layout_marginEnd="16dp"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textAccent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/colorAccentDeep"
                app:layout_constraintTop_toTopOf="@+id/signInBtn"
                app:layout_constraintBottom_toBottomOf="@+id/signInBtn"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>